# Teamsec-Case

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
adapter/src/: pipeline.rs  types.rs
api/: Dockerfile  core_backend_api.postman_collection.json
api/apps/core/: authentication.py  permissions.py
api/apps/core/services/: redis_lock.py
api/apps/etl/: models.py  serializers.py  urls.py  views.py
api/apps/etl/migrations/: 0002_etljob_status_cancelled.py
api/config/: settings.py  urls.py
external_bank/: Dockerfile  external_bank.postman_collection.json
external_bank/bank/: serializers.py  views.py  wsgi.py
external_bank/bank/migrations/: 0001_initial.py
external_bank/bank/services/: storage.py
external_bank/templates/: base.html
project/: .gitignore  Architecture.md  README.md  docker-compose.yml
project/adapter/: Cargo.toml  Dockerfile  pyproject.toml
project/adapter/src/: db.rs  lib.rs  parser.rs  pipeline.rs  profiler.rs  stream.rs  types.rs
project/api/: Dockerfile  core_backend_api.postman_collection.json  requirements.txt
project/api/config/: settings.py  urls.py
project/api/templates/: base.html  dashboard.html  etl_dashboard.html  login.html
project/api/tests/: test_core_api.py  test_sync_messages.py
project/external_bank/: external_bank.postman_collection.json  manage.py
project/external_bank/bank/: apps.py  constants.py  models.py  settings.py  urls.py  views.py
project/external_bank/templates/: portal.html
project/tests/: test_external_bank.py  test_rust_adapter.py
tests/: test_rust_adapter.py
(+23 files in other folders)
