[package]
name = "adapter_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "adapter_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
csv = "1.3"
rust_decimal = "1.33"
chrono = "0.4"
