[package]
name = "adapter_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "adapter_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20" }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
rust_decimal = "1.33"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
thiserror = "1.0"
